# Buraq

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake  Detect_clBLAS.cmake
include/buraq/: context.h  core.h  pot.h  types.h
src/: CMakeLists.txt  fibonacci.c  utility.c
src/base/: CMakeLists.txt
src/base/src/: baselib.cpp
src/blas/: gemm.c  swap.c
src/core/: CMakeLists.txt
src/core/include/buraq/: core.h
src/core/src/: utility.c
src/cuda/: CMakeLists.txt  _init.c  _init.h  gemm.c
src/fib/: CMakeLists.txt
src/ocl/: CMakeLists.txt  _init.c  _init.h  swap.c
src/pot/: CMakeLists.txt
src/pot/include/buraq/: pot.h
src/pot/src/: Fibonacci.c
src/tests/: CMakeLists.txt
tests/: CMakeLists.txt  fibonacci_test.cpp  gemm_test.cpp  swap_test.cpp
